Chapter 10: Updating, showing, and deleting users

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -2,3 +2,11 @@ maximum_name_length: 50
 maximum_email_length: 255
 minimum_password_length: 6
 gravatar_size: 80
+checked: "1"
+per_page: 1
+user:
+  name_length: 50
+  email_length: 255
+  pass_length: 6
+  size_ava: 80
+  size_ava_sm: 50
