--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,3 +1,4 @@
-name_length: 50
-email_length: 255
-password_min_length: 9
+maximum_name_length: 50
+maximum_email_length: 255
+minimum_password_length: 6
+gravatar_size: 80
