--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,7 +6,6 @@ michael:
   activated: true
   activated_at: <%= Time.zone.now %>
 
-
 archer:
   name: Sterling Archer
   email: duchess@example.gov
@@ -25,7 +24,8 @@ malory:
   name: Malory Archer
   email: boss@example.gov
   password_digest: <%= User.digest('password') %>
-
+  activated: true
+  activated_at: <%= Time.zone.now %>
   activated: true
   activated_at: <%= Time.zone.now %>
 
@@ -34,7 +34,6 @@ user_<%= n %>:
   name:  <%= "User #{n}" %>
   email: <%= "user-#{n}@example.com" %>
   password_digest: <%= User.digest('password') %>
-
   activated: true
   activated_at: <%= Time.zone.now %>
 <% end %>
