--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,15 +1,12 @@
 checked: "1"
 per_page: 30
-default_from_email: "ducvinhnguyen2609@gmail.com"
+default_from_email: "giomay321@gmail.com"
 address: "smtp.gmail.com"
 port: 587
 domain: "gmail.com"
 authentication: "plain"
 enable_auto: true
 password_expire_time: 2
-size_limit: 400
-n_5: 5
-img_rule: "image/jpeg,image/gif,image/png"
 user:
   name_length: 50
   email_length: 255
